--- a/AIpaca_App/Views/RecordPage.xaml
+++ b/AIpaca_App/Views/RecordPage.xaml
@@ -4,35 +4,41 @@
              x:Class="AIpaca_App.Views.RecordPage"
              xmlns:resources="clr-namespace:AIpaca_App.Resources.Localization"
              xmlns:vm="clr-namespace:AIpaca_App.ViewModels"
+             xmlns:local="clr-namespace:Microcharts.Maui;assembly=Microcharts.Maui"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              BackgroundColor="{DynamicResource DefaultPageBackgroundColor}">
-            <!--" xmlns:model="clr-namespace:AIpaca_App.Models"
+    <!--" xmlns:model="clr-namespace:AIpaca_App.Models"
     x:DataType="vm:RecordViewModel"-->
-    
+
     <ContentPage.BindingContext>
         <vm:RecordViewModel />
     </ContentPage.BindingContext>
-
     <ScrollView>
-        <CollectionView ItemsSource="{Binding Records}">
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <Frame Margin="10" Padding="10" CornerRadius="10" BorderColor="Gray" BackgroundColor="{DynamicResource DefaultPageBackgroundColor}">
-                        <StackLayout>
-                            <Label Text="{Binding RequestTime, StringFormat='Timestamp: {0}'}" FontAttributes="Bold"/>
-                            <Label Text="{Binding Message}" FontAttributes="Italic"/>
-                            <Label Text="{Binding OriginalText, StringFormat='Original: {0}'}" />
-                            <Label Text="{Binding OriginalLang}"/>
-                            <Label Text="{Binding TranslatedText, StringFormat='Translated: {0}'}"/>
-                            <Label Text="{Binding TranslatedLang}"/>
-                            <Label Text="{Binding Score, StringFormat=' {0}'}" FontAttributes="Bold"/>
-                            <Label Text="{Binding Score, StringFormat='{0} {1}'}" FontAttributes="Bold"/>
-                            <Label Text="{Binding RecommendedTrans}"/>
-                            <Label Text="{Binding Rating}"/>
-                        </StackLayout>
-                    </Frame>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
+        <VerticalStackLayout>
+            <!--<local:ChartView Chart="{Binding ScoreChart}" />-->
+            <CollectionView ItemsSource="{Binding Records}">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Frame Margin="10" Padding="10" CornerRadius="10" BorderColor="Gray" BackgroundColor="{DynamicResource DefaultPageBackgroundColor}">
+                            <StackLayout>
+                                <Label Text="{Binding RequestTime, StringFormat='Timestamp: {0}'}" FontAttributes="Bold"/>
+                                <Label Text="{Binding Message}" FontAttributes="Italic"/>
+                                <Label Text="{Binding OriginalText, StringFormat='Original: {0}'}" />
+                                <Label Text="{Binding OriginalLang}"/>
+                                <Label Text="{Binding TranslatedText, StringFormat='Translated: {0}'}"/>
+                                <Label Text="{Binding TranslatedLang}"/>
+                                <Label Text="{Binding Score, StringFormat=' {0}'}" FontAttributes="Bold"/>
+                                <Label Text="{Binding Score, StringFormat='{0} {1}'}" FontAttributes="Bold"/>
+                                <Label Text="{Binding RecommendedTrans}"/>
+                                <Label Text="{Binding Rating}"/>
+                            </StackLayout>
+                        </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </VerticalStackLayout>
     </ScrollView>
 
 </ContentPage>
+
+
