--- a/AIpaca_App/Views/RecordPage.xaml
+++ b/AIpaca_App/Views/RecordPage.xaml
@@ -4,18 +4,15 @@
              x:Class="AIpaca_App.Views.RecordPage"
              xmlns:resources="clr-namespace:AIpaca_App.Resources.Localization"
              xmlns:vm="clr-namespace:AIpaca_App.ViewModels"
-             xmlns:local="clr-namespace:Microcharts.Maui;assembly=Microcharts.Maui"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              BackgroundColor="{DynamicResource DefaultPageBackgroundColor}">
-    <!--" xmlns:model="clr-namespace:AIpaca_App.Models"
-    x:DataType="vm:RecordViewModel"-->
 
-    <ContentPage.BindingContext>
+        <ContentPage.BindingContext>
         <vm:RecordViewModel />
     </ContentPage.BindingContext>
     <ScrollView>
         <VerticalStackLayout>
-            <!--<local:ChartView Chart="{Binding ScoreChart}" />-->
+            <GraphicsView x:Name="graphicsView" HeightRequest="200" Drawable="{Binding GraphDrawable}" />
             <CollectionView ItemsSource="{Binding Records}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
