로그 기능 추가, 코드 가동성 추가, 디자인 개선
주요 오류를 추적하기 위한 로그 기능 추가
LogPage 추가, SettingPage에서 진입 가능하도록 구현
db 파일 이름 변경
코드의 가독성을 위 데이터베이스 관리 코드 병합 및 최적화
frame의 border 색상 추가

--- a/AIpaca_App/Resources/Styles/Styles.xaml
+++ b/AIpaca_App/Resources/Styles/Styles.xaml
@@ -398,7 +398,7 @@
     </Style>
 
     <Style TargetType="Shell" ApplyToDerivedTypes="True">
-        <Setter Property="Shell.BackgroundColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource OffBlack}}" />
+        <Setter Property="Shell.BackgroundColor" Value="{AppThemeBinding Light=#2c2c2c, Dark=#2c2c2c}" />
         <Setter Property="Shell.ForegroundColor" Value="{OnPlatform WinUI={StaticResource Primary}, Default={StaticResource White}}" />
         <Setter Property="Shell.TitleColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource SecondaryDarkText}}" />
         <Setter Property="Shell.DisabledColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray950}}" />
