--- a/AIpaca_App/Views/RobotPage.xaml
+++ b/AIpaca_App/Views/RobotPage.xaml
@@ -8,7 +8,7 @@
 
     <VerticalStackLayout Spacing="25" Padding="20">
         <!--구글 번역기-->
-        <Frame CornerRadius="15" HasShadow="True" Padding="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
+        <Frame CornerRadius="15" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" HasShadow="True" Padding="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
             <toolkit:Expander>
                 <toolkit:Expander.Header>
                     <Label Text="{x:Static resources:AppResources.googletranslate}" FontAttributes="Bold" FontSize="Large" TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
@@ -21,7 +21,7 @@
         </Frame>
 
         <!--파파고-->
-        <Frame CornerRadius="15" HasShadow="True" Padding="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
+        <Frame CornerRadius="15" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" HasShadow="True" Padding="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
             <toolkit:Expander>
                 <toolkit:Expander.Header>
                     <Label Text="{x:Static resources:AppResources.papagotranslate}" FontAttributes="Bold" FontSize="Large" TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
@@ -34,7 +34,7 @@
         </Frame>
         
         <!--DeepL 번역기-->
-        <Frame CornerRadius="15" HasShadow="True" Padding="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
+        <Frame CornerRadius="15" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" HasShadow="True" Padding="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
             <toolkit:Expander>
                 <toolkit:Expander.Header>
                     <Label Text="{x:Static resources:AppResources.deepltranslate}" FontAttributes="Bold" FontSize="Large" TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
@@ -47,7 +47,7 @@
         </Frame>
         
         <!--LibreTranslate  번역기-->
-        <Frame CornerRadius="15" HasShadow="True" Padding="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
+        <Frame CornerRadius="15" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" HasShadow="True" Padding="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
             <toolkit:Expander>
                 <toolkit:Expander.Header>
                     <Label Text="{x:Static resources:AppResources.libretranslate}" FontAttributes="Bold" FontSize="Large" TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
