--- a/AIpaca_App/Views/SettingsPage.xaml
+++ b/AIpaca_App/Views/SettingsPage.xaml
@@ -12,7 +12,7 @@
             <!--로그인 섹션-->
             <Label Text="{x:Static resources:AppResources.login}" FontAttributes="Bold" FontSize="Large"
                     TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
-            <Frame CornerRadius="15" HasShadow="True" Padding="10"
+            <Frame CornerRadius="15" HasShadow="True" Padding="10" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}"
                     BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
                 <VerticalStackLayout Spacing="10">
                     <StackLayout Orientation="Horizontal" Spacing="10">
@@ -44,7 +44,7 @@
             <!-- 테마 설정 섹션 -->
             <Label Text="{x:Static resources:AppResources.theme}" FontAttributes="Bold" FontSize="Large"
                    TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
-            <Frame CornerRadius="15" HasShadow="True" Padding="10"
+            <Frame CornerRadius="15" HasShadow="True" Padding="10" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}"
                    BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
                 <VerticalStackLayout Spacing="10">
                     <StackLayout Orientation="Horizontal" Spacing="10">
@@ -75,7 +75,7 @@
             <!-- 네트워크 설정 섹션 -->
             <Label Text="{x:Static resources:AppResources.network}" FontAttributes="Bold" FontSize="Large" 
                  TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
-            <Frame CornerRadius="15" HasShadow="True" Padding="10"
+            <Frame CornerRadius="15" HasShadow="True" Padding="10" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}"
                  BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
                 <VerticalStackLayout Spacing="10">
                     <StackLayout Orientation="Horizontal" Spacing="10">
@@ -100,7 +100,7 @@
             <!-- 시스템 설정 섹션 -->
             <Label Text="{x:Static resources:AppResources.system}" FontAttributes="Bold" FontSize="Large"  
                 TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
-            <Frame CornerRadius="15" HasShadow="True" Padding="10" 
+            <Frame CornerRadius="15" HasShadow="True" Padding="10" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}"
                    BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
                 <VerticalStackLayout Spacing="10">
 
@@ -120,15 +120,35 @@
 
                     <StackLayout Orientation="Horizontal" Spacing="10">
                         <Label Text="{x:Static resources:AppResources.languageset}" FontAttributes="Bold" VerticalOptions="Center" 
-                            TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
+                               TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
                         <!-- 공간 채움 -->
                         <BoxView HorizontalOptions="FillAndExpand" BackgroundColor="Transparent"/>
                         <Button Text="{x:Static resources:AppResources.languageset}" Clicked="OnLanguageSettingsClicked" HorizontalOptions="End"/>
+                        <Image Source="icon_right_arrow.png"
+                               HorizontalOptions="End" 
+                               VerticalOptions="Center" 
+                               WidthRequest="10" 
+                               HeightRequest="10" />
+                        <!-- 탭 인식을 위한 GestureRecognizer 추가 -->
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="OnRippleEffectRequested"/>
+                        </StackLayout.GestureRecognizers>
+                    </StackLayout>
+
+                    <!-- 검은색 막대 구분선 추가 -->
+                    <BoxView HeightRequest="1.5" Color="{AppThemeBinding Dark=#555555, Light=#cfcfcf}" HorizontalOptions="FillAndExpand"/>
+
+                    <StackLayout Orientation="Horizontal" Spacing="10">
+                        <Label Text="{x:Static resources:AppResources.errorlog}" FontAttributes="Bold" VerticalOptions="Center" 
+                               TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
+                        <!-- 공간 채움 -->
+                        <BoxView HorizontalOptions="FillAndExpand" BackgroundColor="Transparent"/>
+                        <Button Text="{x:Static resources:AppResources.errorlog}" Clicked="OnErrorLogButtonClicked" HorizontalOptions="End"/>
                         <Image Source="icon_right_arrow.png" 
-                            HorizontalOptions="End" 
-                            VerticalOptions="Center" 
-                            WidthRequest="10" 
-                            HeightRequest="10" />
+                               HorizontalOptions="End" 
+                               VerticalOptions="Center" 
+                               WidthRequest="10" 
+                               HeightRequest="10" />
                         <!-- 탭 인식을 위한 GestureRecognizer 추가 -->
                         <StackLayout.GestureRecognizers>
                             <TapGestureRecognizer Tapped="OnRippleEffectRequested"/>
