성능 최적화 및 디자인 개선
상단 상태 표시, 하단 네비게이션 색상 변경
그래프 색상을 다크 그레이로 변경
RecordPage와 LogPage를 무한스크롤방식으로 변경
RecordPage와 LogPage의 데이터 로드방식 변경
전체데이터 로드에서 데이터의 일부를 여러 페이지로 로드할 수 있도록 변경

--- a/AIpaca_App/Views/RecordPage.xaml
+++ b/AIpaca_App/Views/RecordPage.xaml
@@ -17,7 +17,7 @@
                 <GraphicsView x:Name="graphicsView" HeightRequest="200" Drawable="{Binding GraphDrawable}" />
             </Frame>
 
-            <CollectionView ItemsSource="{Binding Records}">
+            <CollectionView ItemsSource="{Binding Records}" RemainingItemsThreshold="1" RemainingItemsThresholdReached="OnRemainingItemsThresholdReached">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Frame Margin="10" Padding="10" CornerRadius="10" BorderColor="Gray" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
