그래프 초기 화면을 오른쪽으로 설정
그래프의 최신 데이터를 바로 열람 가능하도록 수정
RecordPage에서 새로 고침 시 그래프를 다시 작성하도록 추가

--- a/AIpaca_App/Views/RecordPage.xaml
+++ b/AIpaca_App/Views/RecordPage.xaml
@@ -10,12 +10,13 @@
     <ContentPage.BindingContext>
         <vm:RecordViewModel />
     </ContentPage.BindingContext>
+    
     <RefreshView IsRefreshing="{Binding IsRefreshing}" Command="{Binding RefreshCommand}">
         <ScrollView Scrolled="ScrollView_Scrolled">
             <VerticalStackLayout>
 
                 <Frame Margin="10" Padding="10" CornerRadius="10" BorderColor="Gray" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
-                    <ScrollView Orientation="Horizontal">
+                    <ScrollView x:Name="graphicsScrollView" Orientation="Horizontal">
                         <GraphicsView x:Name="graphicsView" HeightRequest="200" WidthRequest="{Binding GraphWidth}" Drawable="{Binding GraphDrawable}" />
                     </ScrollView>
                 </Frame>
