--- a/AIpaca_App/Views/SettingsPage.xaml
+++ b/AIpaca_App/Views/SettingsPage.xaml
@@ -4,6 +4,7 @@
              x:Class="AIpaca_App.Views.SettingsPage"
              xmlns:vm="clr-namespace:AIpaca_App.ViewModels"
              xmlns:resources="clr-namespace:AIpaca_App.Resources.Localization"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:DataType="vm:MainViewModel"
              BackgroundColor="{DynamicResource DefaultPageBackgroundColor}">
 
@@ -27,7 +28,7 @@
                                 IsVisible="{Binding IsLoggedIn, Converter={StaticResource InverseBooleanConverter}}"/>
                         <!-- 로그아웃 버튼 -->
                         <Button Text="{x:Static resources:AppResources.logout}" Clicked="OnLogoutButtonClicked" IsVisible="{Binding IsLoggedIn}" />
-                        <Image Source="icon_right_arrow.png" 
+                        <Image Source="setting_right_arrow.png" 
                                 HorizontalOptions="End" 
                                 VerticalOptions="Center" 
                                 WidthRequest="10" 
@@ -84,7 +85,7 @@
                         <!-- 공간 채움 -->
                         <BoxView HorizontalOptions="FillAndExpand" BackgroundColor="Transparent"/>
                         <Button Text="{x:Static resources:AppResources.apisetting}" Clicked="OnAPISettingButtonClicked" WidthRequest="80" HorizontalOptions="End"/>
-                        <Image Source="icon_right_arrow.png" 
+                        <Image Source="setting_right_arrow.png" 
                                HorizontalOptions="End" 
                                VerticalOptions="Center" 
                                WidthRequest="10" 
@@ -124,7 +125,7 @@
                         <!-- 공간 채움 -->
                         <BoxView HorizontalOptions="FillAndExpand" BackgroundColor="Transparent"/>
                         <Button Text="{x:Static resources:AppResources.languageset}" Clicked="OnLanguageSettingsClicked" HorizontalOptions="End"/>
-                        <Image Source="icon_right_arrow.png"
+                        <Image Source="setting_right_arrow.png"
                                HorizontalOptions="End" 
                                VerticalOptions="Center" 
                                WidthRequest="10" 
@@ -154,6 +155,62 @@
                             <TapGestureRecognizer Tapped="OnRippleEffectRequested"/>
                         </StackLayout.GestureRecognizers>
                     </StackLayout>
+
+                    <!-- 검은색 막대 구분선 추가 -->
+                    <BoxView HeightRequest="1.5" Color="{AppThemeBinding Dark=#555555, Light=#cfcfcf}" HorizontalOptions="FillAndExpand"/>
+
+                    <StackLayout Orientation="Horizontal" Spacing="10">
+                        <Image Source="setting_error.png" 
+                               HorizontalOptions="Start" 
+                               VerticalOptions="Center" 
+                               WidthRequest="20" 
+                               HeightRequest="20" />
+                        <Button Text="{x:Static resources:AppResources.errorlog}" BackgroundColor="Transparent" TextColor="{AppThemeBinding Dark=White, Light=Black}" FontSize="Medium" Clicked="OnErrorLogButtonClicked" HorizontalOptions="FillAndExpand"/>
+                        <Image Source="setting_right_arrow.png" 
+                                HorizontalOptions="End" 
+                                VerticalOptions="Center" 
+                                WidthRequest="10" 
+                                HeightRequest="10" />
+                        <!-- 탭 인식을 위한 GestureRecognizer 추가 -->
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="OnRippleEffectRequested"/>
+                        </StackLayout.GestureRecognizers>
+                    </StackLayout>
+
+
+                    <!-- 검은색 막대 구분선 추가 -->
+                    <BoxView HeightRequest="1.5" Color="{AppThemeBinding Dark=#555555, Light=#cfcfcf}" HorizontalOptions="FillAndExpand"/>
+
+                    <StackLayout Orientation="Horizontal" Spacing="10">
+                        <StackLayout.Behaviors>
+                            <toolkit:TouchBehavior
+                DefaultAnimationDuration="250"
+                DefaultAnimationEasing="{x:Static Easing.CubicInOut}"
+                PressedOpacity="0.6"
+                PressedScale="0.8" />
+                        </StackLayout.Behaviors>
+
+                        <Image Source="setting_error.png" 
+        HorizontalOptions="Start" 
+        VerticalOptions="Center" 
+        WidthRequest="20" 
+        HeightRequest="20" />
+
+                        <Button Text="{x:Static resources:AppResources.errorlog}" 
+        BackgroundColor="Transparent" 
+        TextColor="{AppThemeBinding Dark=White, Light=Black}" 
+        FontSize="Medium" 
+        Clicked="OnErrorLogButtonClicked" 
+        HorizontalOptions="FillAndExpand">
+                        </Button>
+
+                        <Image Source="setting_right_arrow.png" 
+        HorizontalOptions="End" 
+        VerticalOptions="Center" 
+        WidthRequest="10" 
+        HeightRequest="10" />
+                    </StackLayout>
+
                 </VerticalStackLayout>
             </Frame>
             <Image Source="logo_aipaca.png"
